samples/_failures_safe/1761798600_6438c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22016f12.c: In function ‘main’:
./samples/SAFE/__tmp_22016f12.c:137:68: error: expected ‘)’ at end of input
  137 |                (1.0f - (float)compressed_size / input_len) * 100.0f
      |                                                                    ^
      |                                                                    )
./samples/SAFE/__tmp_22016f12.c:136:15: note: to match this ‘(’
  136 |         printf("Compression ratio: %.2f%%\n",
      |               ^
./samples/SAFE/__tmp_22016f12.c:137:16: error: expected declaration or statement at end of input
  137 |                (1.0f - (float)compressed_size / input_len) * 100.0f
      |                ^
./samples/SAFE/__tmp_22016f12.c:137:16: error: expected declaration or statement at end of input
